--- a/shoppingCards/src/app/views/product-desc/product-desc.component.html
+++ b/shoppingCards/src/app/views/product-desc/product-desc.component.html
@@ -1,1 +1,6 @@
-<p>product-desc works!</p>
+
+{{productDesc.pName}} <br>
+{{productDesc.id}} <br>
+{{productDesc.additionalInfo}} <br>
+{{productDesc.pDesc}} <br>
+{{productDesc.price}} <br>
