--- a/shoppingCards/src/app/shared/modaldesc/modaldesc.component.html
+++ b/shoppingCards/src/app/shared/modaldesc/modaldesc.component.html
@@ -8,7 +8,7 @@
     <div class="modal-body">
       <form>
         <div class="form-group">
-          <label for="dateOfBirth">Date of birth</label>
+          <label for="dateOfBirth">{{product.pDesc}}</label>
           <div class="input-group">
             <input id="dateOfBirth" class="form-control" placeholder="yyyy-mm-dd" name="dp" ngbDatepicker #dp="ngbDatepicker">
             <div class="input-group-append">
@@ -24,7 +24,3 @@
   </ng-template>
   
   <button class="btn btn-lg btn-outline-primary" (click)="open(content)">Launch demo modal</button>
-  
-  <hr>
-  
-  <pre>{{closeResult}}</pre>
