--- a/shoppingCards/src/app/views/product-list/product-list.component.html
+++ b/shoppingCards/src/app/views/product-list/product-list.component.html
@@ -7,9 +7,8 @@
                     <h5 class="card-title">{{item.pName}}</h5>
                     <h6 class="card-subtitle mb-2 text-muted">{{item.additionalInfo}}</h6>
                     <p class="card-text">{{item.pDesc}}</p>
-                    <app-modaldesc></app-modaldesc>
                     <a routerLink="/{{item.pNameURL}}/{{item.id}}" class="card-link">{{item.price}}</a>
-                    <a href="#" class="card-link">? | != ; !</a>
+                    <a href="#" class="card-link"><app-modaldesc [product] = 'item'></app-modaldesc></a>
                 </div>
             </div>
         </div>
