Problem was solved! (HREF WAS THE PROB)

--- a/shoppingCards/src/app/views/product-list/product-list.component.html
+++ b/shoppingCards/src/app/views/product-list/product-list.component.html
@@ -8,7 +8,7 @@
                     <h6 class="card-subtitle mb-2 text-muted">{{item.additionalInfo}}</h6>
                     <p class="card-text">{{item.pDesc}}</p>
                     <a routerLink="/{{item.pNameURL}}/{{item.id}}" class="card-link">{{item.price}}</a>
-                    <a href="#" class="card-link"><app-modaldesc [product] = 'item'></app-modaldesc></a>
+                    <a class="card-link"><app-modaldesc [product] = 'item'></app-modaldesc></a>
                 </div>
             </div>
         </div>
